<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>at.fhv.itm3.s2.roundabout</groupId>
    <artifactId>roundabout-shared</artifactId>
    <version>1.0.0</version>

    <packaging>pom</packaging>

    <properties>
        <project.tests.junit.version>4.12</project.tests.junit.version>
        <project.tests.mockito.version>1.9.5</project.tests.mockito.version>
        <project.tests.awaitility.version>3.0.0</project.tests.awaitility.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <local.repository.folder>${project.basedir}/libs/</local.repository.folder>
    </properties>

    <modules>
        <module>roundabout-api</module>
        <module>roundabout-core</module>
    </modules>

    <build>
        <plugins>
            <!-- Build language level -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.3</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
                            <docletArtifact>
                                <groupId>nl.talsmasoftware</groupId>
                                <artifactId>umldoclet</artifactId>
                                <version>1.0.14</version>
                            </docletArtifact>
                            <additionalparam>
                                -umlIncludeProtectedFields false
                                -umlImageFormat PNG
                                -umlImageDirectory ../../../images/uml-class
                            </additionalparam>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>local-maven-repository</id>
            <url>file://${local.repository.folder}</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>trafsim</groupId>
            <artifactId>trafsim</artifactId>
            <version>0.1</version>
            <scope>system</scope>
            <systemPath>${local.repository.folder}/trafsim-0.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>desmoj</groupId>
            <artifactId>desmoj</artifactId>
            <version>2.5.1e</version>
            <scope>system</scope>
            <systemPath>${local.repository.folder}/desmoj-2.5.1e-bin.jar</systemPath>
        </dependency>
        <!-- https://mvnrepository.com/artifact/nl.talsmasoftware/umldoclet -->
        <dependency>
            <groupId>nl.talsmasoftware</groupId>
            <artifactId>umldoclet</artifactId>
            <version>1.0.14</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.sourceforge.plantuml/plantuml -->
        <dependency>
            <groupId>net.sourceforge.plantuml</groupId>
            <artifactId>plantuml</artifactId>
            <version>8059</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- https://mvnrepository.com/artifact/junit/junit -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${project.tests.junit.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${project.tests.mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.awaitility/awaitility -->
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>${project.tests.awaitility.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>